Fix paging and add sorting
Limit/offset wasn't being applied correctly.

Added sorting through the sortby paramter.